--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/airwave-development/airwave-build-yarn.git"
+    "url": "https://github.com/airwave-development/airwave-build-yarn.git"
   },
   "keywords": [
     "yarn",
