--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "airwave-build-yarn",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "engines": {
-    "atom": "1.x.x"
+    "atom": "^1.0.0"
+  },
+  "providedServices": {
+    "builder": {
+      "description": "Runs Yarn targets",
+      "versions": {
+        "2.0.0": "provideBuilder"
+      }
+    }
   },
   "description": "yarn build module for atom build",
   "main": "./lib/atom-build-yarn",
@@ -10,19 +18,12 @@
     "lib": "lib"
   },
   "dependencies": {
+  },
+  "devDependencies": {
     "atom-build-spec-helpers": "^0.4.0",
-    "fs-extra": "^4.0.2",
-    "graceful-fs": "^4.1.11",
-    "jsonfile": "^4.0.0",
-    "os-tmpdir": "^1.0.2",
-    "rimraf": "^2.2.8",
-    "temp": "^0.8.3",
-    "universalify": "^0.1.1"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "fs-extra": "^4.0.1",
+    "temp": "^0.8.3"
+  }
   "repository": {
     "type": "git",
     "url": "https://github.com/airwave-development/airwave-build-yarn.git"
